<resources>
    <string name="app_name">My Medical Log</string>
    <string name="recording_translated_text">Your translated voice will show up here in text form! Don\'t worry about it
        looking too inaccurate, we\'ll pull the information
        that is necessary and ask if that\'s OK with you.
    </string>
    <string name="recording_continue_btn_text">Continue</string>
    <string name="recording_enter_voice_text">Can\'t Voice?</string>
    <string name="recording_view_log_text">View Profile</string>
    <string name="recording_translation_progress_text">Press ^ To Start Describing Your Issue</string>
    <string name="recording_translation_progress_text_2">Press ^ To Rerecord again!</string>
    <string name="viewSettingsText">Settings</string>
    <string name="switchToListText">Switch To List</string>
    <string name="switchToDisplayText">Switch To Display</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="viewProfileText">View Profile</string>
    <string name="viewLogText">View Log</string>
    <string name="switchToText">Switch To Text</string>
    <string name="switchToVoice">Switch To Voice</string>

    <string name="text_creation_introduction">You are about to setup something....</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_next">Next</string>
    <string name="action_prev">Prev</string>

    <string name="item_label_home">Home</string>
    <string name="item_label_summery">Summery</string>
    <string name="item_label_logs">Logs</string>
    <string name="item_label_avatar">Avatar</string>
    <string name="item_label_entries">Entries</string>
    <string name="item_label_services">Services</string>

    <string name="label_profile_name">Log Name</string>
    <string name="label_security_pin">Pin (4 Digits Max)</string>
    <string name="label_security_password">Password (Max 24 Characters)</string>

    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email Address</string>

    <string name="text_notice_error_heading">An error Has occurred</string>
    <string name="text_notice_error_text">A generic error has occurred. Tap return to continue</string>
    <string name="text_notice_error_btn">Return</string>

    <string name="text_notice_profile_heading">You have not setup your profile</string>
    <string name="text_notice_profile_text">You must setup your profile in order to access this feature. Tap Setup to
        get started
    </string>
    <string name="text_notice_profile_btn">Setup</string>

    <string name="text_notice_doctor_heading">You have not connected to a doctor</string>
    <string name="text_notice_doctor_text">In order to make use of this feature, you must connect to a doctor. Tap
        connect to get started
    </string>
    <string name="text_notice_doctor_btn">Connect</string>


    <string name="label_btn_submit">Submit</string>
    <string name="label_info2">Do you wish to automatically send anonymous log entries to our servers?</string>
    <string name="label_info1">Do you wish for us to backup this log on our servers after each new entry?</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_switch">Switch Profiles</string>
    <string name="menu_connect">Connect To Doctor</string>
    <string name="item_label_doctor">Doctor</string>
    <string name="label_setup_status">An error has occurred</string>
    <string name="label_setup_error">Do Something</string>
    <string name="item_label_entry">Entry</string>
    <string name="item_label_statistics">Statistics</string>
    <string name="label_error_description">Your profile has not been setup yet.</string>
    <string name="item_label_error">Error</string>
    <string name="text_doctor_ppsno_notice">By ticking this box, you agree to allow us to use your PPSNo to connect with
        your doctor for the purpose of validation of the connector
    </string>
    <string name="text_doctor_passcode_notice">* This is a one time passcode generated by the doctor you wish to connect
        to.
    </string>

    <string name="item_label_entry_summery">Entry Summery</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_entry">Entry Activity</string>
    <string name="doctor_ppsno_info">In order to connect to a doctor. You must provide your ppsno to verify that the
        person connecting is the person who is registered to that doctor. Your ppsno will not be shared or stored in our
        system and will only be used for the purpose of verification. Your doctor will be only one with viewing access
        to this information.
    </string>


    <string name="text_log_title_recent">Recent Log</string>
    <string name="text_log_title_current">Current Log</string>

    <string name="text_log_name">Log Name</string>
    <string name="text_log_id">Log Id</string>
    <string name="text_log_severity">Log Severity</string>
    <string name="text_log_status">Log Status</string>
    <string name="text_log_count">Log Count</string>
    <string name="text_log_created">Log Created</string>
    <string name="text_log_updated">Log Updated</string>

    <string name="text_entry_title_recent">Recent Entry</string>
    <string name="text_entry_title_current">Current Entry</string>
    <string name="text_entry_id">Entry Id</string>
    <string name="text_entry_type">Entry Type</string>
    <string name="text_entry_severity">Entry Severity</string>
    <string name="text_entry_severity_none">No Logged Severity</string>
    <string name="text_entry_created">Entry Created</string>
    <string name="text_entry_updated">Entry Updated</string>

    <string name="text_pain_location">Pain Location</string>
    <string name="text_pain_type">Pain Type</string>
    <string name="text_pain_description">Pain Description</string>
    <string name="text_pain_experience">Pain Noticablity</string>
    <string name="text_pain_start">Pain Start Date</string>
    <string name="text_pain_severity">Pain Severity</string>
    <string name="text_pain_title">Pain Details</string>
    <string name="text_creation_warning">Please relook at the input</string>
    <string name="title_activity_log">Log Activity</string>
    <string name="title_activity_creation">Creation Activity</string>
    <string name="title_activity_creation_entry">Creation: Entry</string>
    <string name="title_activity_creation_log">Creation: Log</string>
    <string name="title_activity_creation_doctor">Creation: Doctor</string>
    <string name="title_activity_creation_user">Creation: User</string>
    <string name="text_entries_title">Entries</string>
    <string name="text_sex">Sex</string>

    <string-array name="country_arrays">

    </string-array>

    <string name="sex_prompt">Select Your Sex</string>
    <string name="text_notice_doctor_request_heading">Doctor Connection Request Has Been Sent</string>
    <string name="text_notice_doctor_request_text">Please wait until confirmation of acceptance or rejection. If you
        fill you entered the information incorrectly, just tap resubmit to try again.
    </string>
    <string name="text_doctor_btn_code">Scan QR Code</string>
    <string-array name="sex_arrays">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="text_first_name">NAME</string>
    <string name="text_age">AGE</string>
    <string name="text_phone_no">PHONE NO</string>
    <string name="text_email_address">EMAIL ADDRESS</string>
    <string name="text_address">HOME ADDRESS</string>
    <string name="text_patient_details">USER DETAILS</string>

    <string name="text_notice_no_log_heading">No Log</string>
    <string name="text_notice_no_log_text">You\'ve not created a log for it to show up here.</string>
    <string name="text_notice_no_log_btn">Tap To Create an Log</string>

    <string name="text_notice_no_entry_heading">No Entry</string>
    <string name="text_notice_no_entry_text">You\'ve not created a entry for it to show up here.</string>
    <string name="text_notice_no_entry_btn">Tap To Create an Entry</string>
    <string name="text_notice_doctor_request_btn">Resubmit Request</string>
    <string name="text_ppsno">PPSNO</string>
    <string name="text_doctor_title">Dr</string>
    <string name="patient_title">Patient</string>
    <string name="text_patient_age">Age</string>
    <string name="text_control_upload_btn">Upload Entries</string>
    <string name="text_control_backup_btn">Backup Entries</string>
    <string name="text_control_sync_btn">Sync Information</string>
    <string name="text_control_delete_btn">Disconnect</string>
    <string name="text_status_uploaded">Uploaded</string>
    <string name="text_status_not_uploaded">Not Uploaded</string>

    <string name="creation_text_noticeability_invisible"></string>
    <string name="creation_text_noticeability_noticable"></string>
    <string name="creation_text_noticeability_"></string>

    <string name="creation_text_severity_mild"></string>
    <string name="creation_text_severity_moderate"></string>
    <string name="creation_text_severity_severe"></string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_pain_strength">Pain Strength</string>
</resources>
