<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/content_log"
              android:visibility="gone"
              android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_log_title_current" android:id="@+id/log_title" style="@style/MainTheme.HeadingOne"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_log_name" android:id="@+id/log_name" style="@style/MainTheme.TextView"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_log_created" android:id="@+id/log_created" style="@style/MainTheme.TextView"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_log_updated" android:id="@+id/log_updated" style="@style/MainTheme.TextView"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_log_severity" android:id="@+id/log_severity" style="@style/MainTheme.TextView"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_log_count" android:id="@+id/log_count" style="@style/MainTheme.TextView"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_log_status" android:id="@+id/log_status" style="@style/MainTheme.TextView"/>
</LinearLayout>