<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/content_pain"
              android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pain_title" android:text="@string/text_pain_title" style="@style/MainTheme.HeadingTwo"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pain_location" android:text="@string/text_pain_location" style="@style/MainTheme.TextMain"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pain_type" android:text="@string/text_pain_type"  style="@style/MainTheme.TextMain"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pain_noticability" android:text="@string/text_pain_experience" style="@style/MainTheme.TextMain"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pain_start_date" android:text="@string/text_pain_start"  style="@style/MainTheme.TextMain"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pain_severity" android:text="@string/text_pain_severity" style="@style/MainTheme.TextMain"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pain_strength" android:text="@string/text_pain_strength" style="@style/MainTheme.TextMain"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_pain_description" style="@style/MainTheme.TextMain"/>
        <TextView android:layout_width="match_parent" android:layout_height="150dp" android:id="@+id/pain_description"/>
    </LinearLayout>
</LinearLayout>