<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation_general"
            app:startDestination="@+id/nav_home">
    <fragment
            android:id="@+id/nav_home"
            android:name="com.medco.mymedicallog.ui.main.MainHomeFragment"
            android:label="@string/item_label_home"
            tools:layout="@layout/fragment_main_home">
    </fragment>

    <fragment
            android:id="@+id/nav_logs"
            android:name="com.medco.mymedicallog.ui.main.MainLogsFragment"
            android:label="@string/item_label_logs"
            tools:layout="@layout/fragment_main_logs">
    </fragment>

    <fragment
            android:id="@+id/nav_display"
            android:name="com.medco.mymedicallog.ui.main.MainDisplayFragment"
            android:label="@string/item_label_avatar"
            tools:layout="@layout/fragment_main_display"
    >
    </fragment>

    <fragment
            android:id="@+id/nav_doctor"
            android:name="com.medco.mymedicallog.ui.main.MainDoctorFragment"
            android:label="@string/item_label_doctor"
            tools:layout="@layout/fragment_main_doctor"/>


</navigation>