<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/PLAY_PARENT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.medco.mymedicallog.CreationVoiceActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recordingSection"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/informationSection">
        <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:id="@+id/imageButton2"
                android:onClick="startSpeechTranslation"
                tools:src="@android:drawable/ic_btn_speak_now"
                android:contentDescription="TODO"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recording_translation_progress_text"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/progressText"
                app:layout_constraintVertical_bias="0.19"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/informationSection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <Button
                android:text="@string/recording_continue_btn_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/continueBtn"
                android:visibility="gone"/>
        <TextView
                android:text="@string/recording_translated_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/translatedText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
